# ninjamcp-python

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: claude_desktop_setup.md  credential_management_integration.md  device_filtering_guide.md
examples/: claude_desktop_config.json  credential_management_example.py
src/ninjarmm_mcp/: __init__.py  __main__.py  client.py  server.py
src/ninjarmm_mcp/auth/: __init__.py  manager.py  oauth.py  tokens.py
src/ninjarmm_mcp/models/: __init__.py  activity.py  alert.py  auth.py  device.py  ticket.py
src/ninjarmm_mcp/tools/: __init__.py  activities.py  alerts.py  backups.py  base.py  counts.py  devices.py  scripts.py  tickets.py
src/ninjarmm_mcp/utils/: __init__.py  device_filter.py
tests/: __init__.py
